--- a/idlegame/index.html
+++ b/idlegame/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>your mother game</title>
+    <title>temu simulator</title>
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1>your mother game</h1>
+    <h1>temu simulator</h1>
     <div class="counter" id="resourceCounter">Resources: 0</div>
     <div class="counter" id="minerCounter">Miners: 0</div>
     <button class="btn" onclick="resourceButton()">Gather Resource</button>
